test/typeerrors/Examples/AltVarBind.hs
module AltVarBind where

f = case True of 
      False -> 3
      x     -> x
     
